test/testdata/syntax_errors/invalid_utf8_string.lox
print "invalid utf8 character -> ÿ <-"; // syntax error: invalid UTF-8 byte 0xff
